terraform/main.tf
### General

provider "aws" {
  region = "us-west-1"
  access_key = "${var.aws_access_key}"
  secret_key = "${var.aws_secret_key}"
}

resource "aws_vpc" "default" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.default.id}"
}

### Subnets

resource "aws_subnet" "public" {
  vpc_id = "${aws_vpc.default.id}"

  cidr_block = "10.0.0.0/24"
  availability_zone = "us-west-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "consul_cluster" {
  vpc_id = "${aws_vpc.default.id}"

  cidr_block = "10.0.1.0/24"
  availability_zone = "us-west-1a"
}

resource "aws_subnet" "kafka_cluster" {
  vpc_id = "${aws_vpc.default.id}"

  cidr_block = "10.0.3.0/24"
  availability_zone = "us-west-1a"
}

resource "aws_subnet" "private_services" {
  vpc_id = "${aws_vpc.default.id}"

  cidr_block = "10.0.2.0/24"
  availability_zone = "us-west-1a"
}

### Security groups

resource "aws_security_group" "public" {
  vpc_id = "${aws_vpc.default.id}"
  name = "public"
  description = "SSH and HTTP from everywhere"

  # SSH access from anywhere
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from anywhere
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # this port will be forwarded to influx api
  ingress {
    from_port = 8086
    to_port = 8086
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # this port will be forwarded to influx admin panel
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow consul ui access
  ingress {
    from_port = 8500
    to_port = 8500
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "influxdb" {
  name = "private"
  description = "Disallow access outside vpc"
  vpc_id = "${aws_vpc.default.id}"

  # api access locally
  ingress {
    from_port = 8086
    to_port = 8086
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # ui access locally
  ingress {
    from_port = 8083
    to_port = 8083
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # take input from collectd
  ingress {
    from_port = 25826
    to_port = 25826
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # impersonate graphite
  ingress {
    from_port = 2003
    to_port = 2003
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # SSH access locally
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
}

resource "aws_security_group" "kafka" {
  name = "kafka"
  description = "Open up kafka communication"
  vpc_id = "${aws_vpc.default.id}"

  # api access locally
  ingress {
    from_port = 6667
    to_port = 6667
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # SSH access locally
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
}

resource "aws_security_group" "statsd" {
  name = "statsd"
  description = "Open up statsd udp"
  vpc_id = "${aws_vpc.default.id}"

  # api access locally
  ingress {
    from_port = 8125
    to_port = 8125
    protocol = "udp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # SSH access locally
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
}

resource "aws_security_group" "parkeeper" {
  name = "parkeeper"
  description = "Open up traditional zookeper ports"
  vpc_id = "${aws_vpc.default.id}"

  # api access locally
  ingress {
    from_port = 2181
    to_port = 2181
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # SSH access locally
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
}

resource "aws_security_group" "consul" {
  name = "consul"
  description = "Consul internal traffic + maintenance."
  vpc_id = "${aws_vpc.default.id}"

  # SSH access from anywhere
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  ingress {
    from_port = 53
    to_port = 53
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
  ingress {
    from_port = 53
    to_port = 53
    protocol = "udp"
    cidr_blocks = ["10.0.0.0/16"]
  }
  ingress {
    from_port = 8300
    to_port = 8302
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
  ingress {
    from_port = 8301
    to_port = 8302
    protocol = "udp"
    cidr_blocks = ["10.0.0.0/16"]
  }
  ingress {
    from_port = 8400
    to_port = 8400
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
  ingress {
    from_port = 8500
    to_port = 8500
    protocol = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
}

### Routers

resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.default.id}"
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }
}

resource "aws_route_table_association" "dmz" {
  subnet_id = "${aws_subnet.public.id}"
  route_table_id = "${aws_route_table.public.id}"
}

### Instances

resource "aws_instance" "web" {
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  subnet_id = "${aws_subnet.public.id}"

  ami = "${var.grafana-ami}"
  security_groups = ["${aws_security_group.public.id}", "${aws_security_group.consul.id}"]
  associate_public_ip_address = true
}

resource "aws_instance" "influxdb" {
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  subnet_id = "${aws_subnet.private_services.id}"

  ami = "${var.influx-ami}"
  security_groups = ["${aws_security_group.influxdb.id}", "${aws_security_group.consul.id}"]
}

resource "aws_instance" "statsd" {
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  subnet_id = "${aws_subnet.private_services.id}"

  ami = "${var.statsd-ami}"
  security_groups = ["${aws_security_group.statsd.id}", "${aws_security_group.consul.id}"]
}

resource "aws_instance" "parkeeper" {
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  subnet_id = "${aws_subnet.private_services.id}"

  ami = "${var.parkeeper-ami}"
  security_groups = ["${aws_security_group.parkeeper.id}", "${aws_security_group.consul.id}"]
}

resource "aws_instance" "consul0" {
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  subnet_id = "${aws_subnet.consul_cluster.id}"
  private_ip = "10.0.1.100"

  ami = "${var.consul-ami}"
  security_groups = ["${aws_security_group.consul.id}"]
}
resource "aws_instance" "consul1" {
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  subnet_id = "${aws_subnet.consul_cluster.id}"
  private_ip = "10.0.1.101"

  ami = "${var.consul-ami}"
  security_groups = ["${aws_security_group.consul.id}"]
}
resource "aws_instance" "consul2" {
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  subnet_id = "${aws_subnet.consul_cluster.id}"
  private_ip = "10.0.1.102"

  ami = "${var.consul-ami}"
  security_groups = ["${aws_security_group.consul.id}"]
}


resource "aws_instance" "kafka" {
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  subnet_id = "${aws_subnet.kafka_cluster.id}"

  ami = "${var.kafka-ami}"
  security_groups = ["${aws_security_group.kafka.id}", "${aws_security_group.consul.id}"]
}
